max points project is working